<resources>
    <string name="app_name">DeniSak Prototype 1</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="signout">Logout</string>
    <string name="textview">hzzz</string>
</resources>